Added catalogue's logic

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -3,17 +3,23 @@
 
 {% block title %}Каталог{% endblock %}
 {% block content %}
-    <div class="container">
-        <div class="header">
-            <h1><a href="/catalog">Каталог</a></h1>
-        </div>
-
-        <div class="sort-block">
-            {# Здесь должен быть раздел с сортировкой #}
-        </div>
-
-        <div class="content">
-            {# Здесь должен отображаться каталог с телефонами #}
-        </div>
+<div class="container">
+    <div class="header">
+        <h1><a href="/catalog">Каталог</a></h1>
     </div>
+
+    <div class="sort-block">
+        Sort: <a href="?sort=name">by name</a> <a href="?sort=price">by price asc</a> <a href="?sort=-price">by price desc</a>
+    </div>
+
+    <div class="content">
+        {% for phone in phones %}
+        <div class=section>{{ phone.name }}
+            Price: {{ phone.price_text }}р.
+            <img src="{{ phone.image }}" alt="{{ phone.name }}">
+        </div>
+        {% endfor %}
+
+    </div>
+</div>
 {% endblock %}
